# star-prop

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  FindLog4Cxx.cmake  FindMySQL.cmake  FindROOT.cmake  FindSTAR.cmake  LICENSE  README.md  StarCommon.cmake  dep_scan.py  deps.cmake  gen_linkdef.sh  target_properties.cmake
.travis/: default.nix
StRoot/StFTTSimulatorMaker/: StFTTSimulatorMaker.cxx  StFTTSimulatorMaker.h
StRoot/StFstSimMaker/: StFstFastSimMaker.cxx  StFstFastSimMaker.h
StRoot/StFtsFastSimulatorMaker/: .gitignore  StFtsFastSimulatorMaker.cxx  StFtsFastSimulatorMaker.h
StRoot/StFttSimMaker/: StFttFastSimMaker.cxx  StFttFastSimMaker.h
StRoot/StFwdTrackMaker/: StFwdTrackMaker.cxx  StFwdTrackMaker.h
StRoot/StFwdTrackMaker/XmlConfig/: HistoBins.h  Utils.cxx  XmlConfig.cxx  XmlConfig.h  XmlString.cxx  XmlString.h
StRoot/StFwdTrackMaker/include/Tracker/: ConfigUtil.h  CriteriaKeeper.h  FastSim.h  FwdGeomUtils.h  FwdHit.h  FwdTracker.h  HitLoader.h  QualityPlotter.h  STARField.h  TrackFitter.h  VertexFinder.h  loguru.h
StRoot/StFwdTrackMaker/macros/: runHijingSimulation.C  runPythia8Simulation.C  simple.C  testg.C
StRoot/StSiSimulatorMaker/: StSiSimulatorMaker.cxx  StSiSimulatorMaker.h
StRoot/StSiSlowSimMaker/: StFstSlowSimMaker.cxx  StFstSlowSimMaker.h
StRoot/StSiSlowSimulatorMaker/: StSiSlowSimulatorMaker.cxx  StSiSlowSimulatorMaker.h
StRoot/StgMaker/: README.md  StgMaker.cxx  StgMaker.h  config.xml  test.sh
StRoot/StgMaker/XmlConfig/: HistoBins.h  IConfig.h  IObject.h  RapidXmlWrapper.h  Utils.cxx  Utils.h  XmlConfig.cxx  XmlConfig.h  XmlString.cxx  XmlString.h  rapidXML.h
StRoot/StgMaker/include/Tracker/: ConfigUtil.h  CriteriaKeeper.h  FastSim.h  FwdHit.h  FwdTracker.h  GitCommitTagger.h  HitLoader.h  QualityPlotter.h  STARField.h  TrackFitter.h  VertexFinder.h  loguru.h
StRoot/StgMaker/macros/: simple.C  testg.C  testg.kumac
StRoot/StgUtil/XmlConfig/: Logger.h  Utils.h  unit.cxx
cmake/: FindCERNLIB.cmake  FindLibXml2.cmake  FindLog4Cxx.cmake  FindSTAR.cmake  StarCommon.cmake  blacklisted_lib_dirs.txt  source_properties.cmake  target_properties.cmake
doc/: building-star-software.md
docker/: .rootrc  Dockerfile.star-base-centos7  Dockerfile.star-base-centos7.4  Dockerfile.star-base-centos7_4  Dockerfile.star-base-ubuntu16  Dockerfile.star-base-ubuntu18  Dockerfile.star-sw  Dockerfile.star-sw-centos-release  Dockerfile.star-sw-cons  Dockerfile.star-sw-release  Dockerfile.star-sw-test  Dockerfile.star-test-data  README.md  build_cernlib.sh  cernlib_2006.patch  packages-centos  packages.centos  packages.centos-m32  packages.ubuntu  rootlogon.C
docker/star-base/: Dockerfile.ubuntu16  Dockerfile.ubuntu18  packages  start_cern
docker/star-sw/: Dockerfile.test
docker/star-sw/patch/: 0001-Include-missing-c-header.patch  0003-gcc5.4-complains-about-undefined-fpos-symbol.patch  0004-Make-internal-type-public-for-root5-and-gcc5.4-combo.patch
patch/: cernlib_2006-m32.patch  root_v5.34.38-m32.patch
patch/SL17/: 0001-StKFVertexMaker-Added-missing-include.patch
patches/SL17/: 0001-Remove-empty-file.patch
patches/gcc540/: 0001-Fix-pointless-abs-of-never-negative-unsigned-argumen.patch  0002-Compare-addresses-of-ostream-objects.-Equal-operator.patch
patches/precmake/: 0001-Remove-reference-to-non-existent-class-TPaveTree.patch  0002-Remove-empty-file.patch  0003-Add-missing-include-for-TH1K.patch
scripts/: .rootrc.in  apply_patch.py  build_star-sw.sh  build_star-sw_racf.sh  cvs2git-cron.sh  cvs2git-paths.txt  cvs2git_cron.sh  cvs2git_paths.txt  dep_scan.py  entrypoint.sh.in  gdrive.py  gen_linkdef.sh  thisstar.sh  thisstar.sh.in  webhook_github_travis-ci.js
star-aux/: StArray_cint.h  rootlogoff.C  rootlogon.C
tests/: sampleList_opt.txt  test_reco_sample.py
